--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <!-- Hint button -->
           <button id="hint-btn" class="btn btn-default hide-me" type="button">Give a hint</button>
           <!-- Submit button -->
-          <button id='submit-btn' class="btn btn-lg btn-primary hide-me" type="button">Submit</button>
+          <button onclick = "startPattern()" id='submit-btn' class="btn btn-lg btn-primary hide-me" type="button">Submit</button>
           <!-- Start Over button -->
           <button id='startover-btn' class="btn btn-default" type="button">Start Over!</button>
         </div>
