division of index and test1set1

--- a/test1_set1/test1_set1.html
+++ b/test1_set1/test1_set1.html
@@ -20,7 +20,7 @@
     <div class="center">
       <!-- Game title -->
       <h1>Welcome to Eyes-Free Interactions Lab!</h1>
-      <p id='helper-text'>Instructions:</p>
+      <p id='helper-text'>Enter a guess from 1-100. Guess right to win a prize!</p>
 
       <form id="guessing-form">
         <div>
