instructions added for vibration-emote experiment

--- a/public/index.html
+++ b/public/index.html
@@ -16,28 +16,33 @@
 <body class="background">
   <div class="container-fluid">
     <div class="center">
-      <!-- Game title -->
       <h1>Welcome to Eyes-Free Interactions Lab!</h1>
-
-      <p id='helper-text'>Instructions:</p>
-
-      <form id="guessing-form">
-        <div>
-          <!-- Number input box -->
-          <input class='hide-me' id="number-input" type="text" placeholder="Enter a guess" autocomplete="off">
-          <br>
-          <!-- Hint button -->
-          <button id="hint-btn" class="btn btn-default hide-me" type="button">Give a hint</button>
-          <!-- Submit button -->
-          <button onclick = "startPattern()" id='submit-btn' class="btn btn-lg btn-primary hide-me" type="button">Submit</button>
-          <!-- Start Over button -->
-          <button id='startover-btn' class="btn btn-default" type="button">Start Over!</button>
-        </div>
-      </form>
-      <div id='prev-guesses' class='hide-me'></div>
-      <!-- Remaining guesses -->
-      <div class='hide-me'><p>Remaining Guesses:</p><h4 id="guesses-remaining">5</h4></div>
-      <div id="prize-image"></div>
+      <hr>
+      <p>Thank you for participating in our Human Computer Interaction research project! You will be participating two 2 sets of experiments (total 4 sets).</p>
+      <hr>
+      <p>Here are the instructions for the two experiemnts:</p>
+      <ul>
+        <li>Vibration-Emote Experiment
+          <ol>
+            <li>
+              First, you will start with learning 6 different reaction emotes represented by different vibrations. Click each reaction button to learn how each reaction is represented by the vibration.
+            </li>
+            <li>
+              Keep "learning" reactions until you are comfortable and are confident you can identify which vibration corresponds to which reaction. 
+            </li>
+            <li>
+              Once you are comfortable, you may click proceed button to proceed into the experiment. 
+            </li>
+            <li>
+              In the experiment, you will be given a vibration, 6 reaction buttons and a repeat vibration button. Click the reaction which you think corresponds to the given vibration. You may repeat the vibration by pressing repeat vibration button.
+            </li>
+            <li>
+              Once you are done with the experiment, share the result page with the Project BAKI team member. 
+            </li>
+          </ol>
+        </li>
+        <li>Emote-Gesture Experiment</li>
+      </ul>
     </div>
   </div>
 
