--- a/test1_set1/test1_set1.html
+++ b/test1_set1/test1_set1.html
@@ -4,9 +4,8 @@
   <head>
       <title>Test Page 1</title>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <link rel="stylesheet" href="test1_set1.css">
-
   </head>
 
   <body>
@@ -16,29 +15,32 @@
 
     <div class="items">
       <a href="https://google.com">
-        <img src="/public/like.png">
+        <img class="images" src="/public/like.png">
       </a>
 
       <a href="https://google.com">
-        <img src="/public/heart.png">
+        <img class="images" src="/public/heart.png">
+      </a>
+    </div>
+
+    <div class="items">
+      <a href="https://google.com">
+        <img class="images" src="/public/laugh.png" alt="Laugh Emoticon">
       </a>
 
       <a href="https://google.com">
-        <img src="/public/laugh.png" alt="Laugh Emoticon">
+        <img class="images" src="/public/care.png" alt="Care Emoticon">
+      </a>
+    </div>
+
+    <div class="items">
+      <a href="https://google.com">
+        <img class="images" src="/public/sad.png" alt="Sad Emoticon">
       </a>
 
       <a href="https://google.com">
-        <img src="/public/care.png" alt="Care Emoticon">
+        <img class="images" src="/public/angry.png" alt="Angry Emoticon">
       </a>
-
-      <a href="https://google.com">
-        <img src="/public/sad.png" alt="Sad Emoticon">
-      </a>
-
-      <a href="https://google.com">
-        <img src="/public/angry.png" alt="Angry Emoticon">
-      </a>
-
     </div>
   </body>
 </html>
