--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/public/index.css">
 
     
   </head>
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <div class="center">
       <h1>Welcome to Eyes-Free Interactions Lab!
-        <p class = "github">View our source code at 
+        <p class = "github"> View our source code at 
           <a href='https://github.com/gypark23/projectBAKI'><i class="fa fa-github" style="text-align: right;"></i></a>
         </p>
       </h1>
