--- a/test1_set1/test1_set1.html
+++ b/test1_set1/test1_set1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<script src="test1_set1.js"></script>
 <html>
   <head>
       <title>Test Page 1</title>
@@ -12,35 +12,23 @@
     <h1 class="instructions">
       Test 1 of 30: Select the correct emoticon below
     </h1>
-
+    <hr>
     <div class="items">
-      <a href="https://google.com">
-        <img class="images" src="/public/like.png">
-      </a>
+        <img class="images" onclick = "test(0)" src="/public/like.png" alt="Like Emoticon">
 
-      <a href="https://google.com">
-        <img class="images" src="/public/heart.png">
-      </a>
+        <img class="images" onclick = "test(1)" src="/public/heart.png" alt = "Heart Emoticon">
     </div>
 
     <div class="items">
-      <a href="https://google.com">
-        <img class="images" src="/public/laugh.png" alt="Laugh Emoticon">
-      </a>
+        <img class="images" onclick = "test(2)" src="/public/laugh.png" alt="Laugh Emoticon">
 
-      <a href="https://google.com">
-        <img class="images" src="/public/care.png" alt="Care Emoticon">
-      </a>
+        <img class="images" onclick = "test(3)" src="/public/care.png" alt="Care Emoticon">
     </div>
 
     <div class="items">
-      <a href="https://google.com">
-        <img class="images" src="/public/sad.png" alt="Sad Emoticon">
-      </a>
+        <img class="images" onclick = "test(4)" src="/public/sad.png" alt="Sad Emoticon">
 
-      <a href="https://google.com">
-        <img class="images" src="/public/angry.png" alt="Angry Emoticon">
-      </a>
+        <img class="images" onclick = "test(5)" src="/public/angry.png" alt="Angry Emoticon">
     </div>
   </body>
 </html>
