added vibration on instruction

--- a/test1_set1/test1_set1_instructions.html
+++ b/test1_set1/test1_set1_instructions.html
@@ -6,6 +6,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <link rel="stylesheet" href="test1_set1.css">
+      <script src="test1_set1/test1_set1.js"></script>
   </head>
 
   <body>
@@ -38,32 +39,32 @@
         <tr>
             <td><img class="thumbnails" src="/public/like.png"></td>
             <td>1 Short Vibration</td>
-            <td><Button>Play</Button></td>
+            <td><Button onclick = "like()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/heart.png"></td>
             <td>2 Short Vibrations</td>
-            <td><Button>Play</Button></td>
+            <td><Button onclick = "love()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/laugh.png"></td>
             <td>4 Short Vibrations</td>
-            <td><Button>Play</Button></td>
+            <td><Button onclick = "laugh()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/care.png"></td>
             <td>2 Short + 1 Long Vibration</td>
-            <td><Button>Play</Button></td>
+            <td><Button onclick = "care()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/sad.png"></td>
             <td>1 Long Vibration</td>
-            <td><Button>Play</Button></td>
+            <td><Button onclick = "sad()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/angry.png"></td>
             <td>2 Long Vibrations</td>
-            <td><Button>Play</Button></td>
+            <td><Button onclick = "angry()">Play</Button></td>
         </tr>
 
     </table>
