--- a/test1_set1/test1_set1_instructions.html
+++ b/test1_set1/test1_set1_instructions.html
@@ -6,7 +6,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <link rel="stylesheet" href="test1_set1.css">
-      <script src="test1_set1/test1_set1.js"></script>
+      <script src="test1_set1.js"></script>
   </head>
 
   <body>
