--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <a href='../test1_set1/test1_set1.html'><button type = "button" class = "button">Proceed</button></a>
+  <a href='../test1_set1/test1_set1_instructions.html'><button type = "button" class = "button">Proceed</button></a>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
