--- a/test1_set1/test1_set1.html
+++ b/test1_set1/test1_set1.html
@@ -14,21 +14,21 @@
     </h1>
     <hr>
     <div class="items">
-        <img class="images" onclick = "test(0)" src="/public/like.png" alt="Like Emoticon">
+        <img class="images" onclick = "test(0)" id = 'like' src="/public/like.png" alt="Like Emoticon">
 
-        <img class="images" onclick = "test(1)" src="/public/heart.png" alt = "Heart Emoticon">
+        <img class="images" onclick = "test(1)" id = 'love' src="/public/heart.png" alt = "Heart Emoticon">
     </div>
 
     <div class="items">
-        <img class="images" onclick = "test(2)" src="/public/laugh.png" alt="Laugh Emoticon">
+        <img class="images" onclick = "test(2)" id = 'laugh' src="/public/laugh.png" alt="Laugh Emoticon">
 
-        <img class="images" onclick = "test(3)" src="/public/care.png" alt="Care Emoticon">
+        <img class="images" onclick = "test(3)" id = 'care' src="/public/care.png" alt="Care Emoticon">
     </div>
 
     <div class="items">
-        <img class="images" onclick = "test(4)" src="/public/sad.png" alt="Sad Emoticon">
+        <img class="images" onclick = "test(4)" id = 'sad' src="/public/sad.png" alt="Sad Emoticon">
 
-        <img class="images" onclick = "test(5)" src="/public/angry.png" alt="Angry Emoticon">
+        <img class="images" onclick = "test(5)" id = 'angry' src="/public/angry.png" alt="Angry Emoticon">
     </div>
   </body>
 </html>
