--- a/test1_set1/test1_set1.html
+++ b/test1_set1/test1_set1.html
@@ -9,9 +9,10 @@
   </head>
 
   <body>
-    <h1>
-      Test 1 of 30: Select the correct emoticon below
+    <h1 id = testText>
+      Test 1 of 10: Select the correct emoticon below
     </h1>
+    <p id = selectNow>Wait...</p>
     <hr>
     <div class="items">
         <img class="images" onclick = "test(0)" id = 'like' src="/public/like.png" alt="Like Emoticon">
