--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       <hr>
       <p>Thank you for participating in our Human Computer Interaction research project! You will be participating two 2 sets of experiments (total 4 sets).</p>
       <hr>
-      <p class = "instruction">Here are the instructions for the two experiemnts:</p>
+      <p class = "instruction">Here are the instructions for the two experiments:</p>
       <ul>
         <li>Vibration-Emote Experiment
           <ol>
