test result added

--- a/test1_set1/test1_set1.html
+++ b/test1_set1/test1_set1.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1 id = testText>
-      Test 1 of 10: Select the correct emoticon below
+      Press ANY emoticon below to begin the experiment!
     </h1>
     <p id = selectNow>Wait...</p>
     <hr>
