moved icons to assets

--- a/test1_set1/test1_set1_instructions.html
+++ b/test1_set1/test1_set1_instructions.html
@@ -37,32 +37,32 @@
             <th>Vibration</th>
         </tr>
         <tr>
-            <td><img class="thumbnails" src="/public/like.png"></td>
+            <td><img class="thumbnails" src="/assets/like.png"></td>
             <td>1 Short Vibration</td>
             <td><Button onclick = "like()">Play</Button></td>
         </tr>
         <tr>
-            <td><img class="thumbnails" src="/public/heart.png"></td>
+            <td><img class="thumbnails" src="/assets/heart.png"></td>
             <td>2 Short Vibrations</td>
             <td><Button onclick = "love()">Play</Button></td>
         </tr>
         <tr>
-            <td><img class="thumbnails" src="/public/laugh.png"></td>
+            <td><img class="thumbnails" src="/assets/laugh.png"></td>
             <td>4 Short Vibrations</td>
             <td><Button onclick = "laugh()">Play</Button></td>
         </tr>
         <tr>
-            <td><img class="thumbnails" src="/public/care.png"></td>
+            <td><img class="thumbnails" src="/assets/care.png"></td>
             <td>2 Short + 1 Long Vibration</td>
             <td><Button onclick = "care()">Play</Button></td>
         </tr>
         <tr>
-            <td><img class="thumbnails" src="/public/sad.png"></td>
+            <td><img class="thumbnails" src="/assets/sad.png"></td>
             <td>1 Long Vibration</td>
             <td><Button onclick = "sad()">Play</Button></td>
         </tr>
         <tr>
-            <td><img class="thumbnails" src="/public/angry.png"></td>
+            <td><img class="thumbnails" src="/assets/angry.png"></td>
             <td>2 Long Vibrations</td>
             <td><Button onclick = "angry()">Play</Button></td>
         </tr>
