updated vibrations again

--- a/test2_set1/test2_set2_instructions.html
+++ b/test2_set1/test2_set2_instructions.html
@@ -2,16 +2,16 @@
 
 <html>
   <head>
-      <title>Vibration Set 1 Instructions</title>
+      <title>Vibration Set 2 Instructions</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <link rel="stylesheet" href="test1_set1.css">
-      <script src="test1_set1.js"></script>
+      <script src="test2_set2.js"></script>
   </head>
 
   <body>
     <h1>
-      Set 1: Participant Instructions
+      Set 2: Participant Instructions
     </h1>
 
     <p>
@@ -30,20 +30,20 @@
       button to move onto the experiment. 
     </p>
 
-    <table id="Instruction_Table">
+    <table>
         <tr>
             <th>Emoticon</th>
-            <th>Description</th>
+            <th>Description (Morse Code)</th>
             <th>Vibration</th>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/like.png"></td>
-            <td>1 Short Vibration</td>
+            <td>1 Long Vibration</td>
             <td><Button onclick = "like()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/heart.png"></td>
-            <td>2 Short Vibrations</td>
+            <td>1 Short + 1 Long + 2 Short Vibrations</td>
             <td><Button onclick = "love()">Play</Button></td>
         </tr>
         <tr>
@@ -53,24 +53,24 @@
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/care.png"></td>
-            <td>2 Short + 1 Long Vibration</td>
+            <td>1 Long + 1 Short + 1 Long + 1 Short</td>
             <td><Button onclick = "care()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/sad.png"></td>
-            <td>1 Long Vibration</td>
+            <td>3 Short Vibrations</td>
             <td><Button onclick = "sad()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/public/angry.png"></td>
-            <td>2 Long Vibrations</td>
+            <td>1 Short + 1 Long Vibration</td>
             <td><Button onclick = "angry()">Play</Button></td>
         </tr>
 
     </table>
 
     <div>
-        <a href='test1_set1.html'><button type = "button" class = "button">Proceed</button></a>
+        <a href='test2_set2.html'><button type = "button" class = "button">Proceed</button></a>
     </div>
       
     <!-- <div class="thumbnails">
