--- a/test1_vibration/option2/test1_set1/test1_set1.html
+++ b/test1_vibration/option2/test1_set1/test1_set1.html
@@ -15,21 +15,21 @@
     <p id = selectNow>Wait...</p>
     <hr>
     <div class="items">
-        <img class="images" onclick = "test(0)" id = 'like' src="../assets/like.png" alt="Like Emoticon">
+        <img class="images" onclick = "test(0)" id = 'like' src="/assets/like.png" alt="Like Emoticon">
 
-        <img class="images" onclick = "test(1)" id = 'love' src="../assets/heart.png" alt = "Heart Emoticon">
+        <img class="images" onclick = "test(1)" id = 'love' src="/assets/heart.png" alt = "Heart Emoticon">
     </div>
 
     <div class="items">
-        <img class="images" onclick = "test(2)" id = 'laugh' src="../assets/laugh.png" alt="Laugh Emoticon">
+        <img class="images" onclick = "test(2)" id = 'laugh' src="/assets/laugh.png" alt="Laugh Emoticon">
 
-        <img class="images" onclick = "test(3)" id = 'care' src="../assets/care.png" alt="Care Emoticon">
+        <img class="images" onclick = "test(3)" id = 'care' src="/assets/care.png" alt="Care Emoticon">
     </div>
 
     <div class="items">
-        <img class="images" onclick = "test(4)" id = 'sad' src="../assets/sad.png" alt="Sad Emoticon">
+        <img class="images" onclick = "test(4)" id = 'sad' src="/assets/sad.png" alt="Sad Emoticon">
 
-        <img class="images" onclick = "test(5)" id = 'angry' src="../assets/angry.png" alt="Angry Emoticon">
+        <img class="images" onclick = "test(5)" id = 'angry' src="/assets/angry.png" alt="Angry Emoticon">
     </div>
   </body>
 </html>
