--- a/test1_vibration/option2/test1_set1/test1_set1_instructions.html
+++ b/test1_vibration/option2/test1_set1/test1_set1_instructions.html
@@ -30,7 +30,7 @@
       button to move onto the experiment. 
     </p>
 
-    <table>
+    <table id="Instruction_Table">
         <tr>
             <th>Emoticon</th>
             <th>Description</th>
