update index buttons

--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,18 @@
     </div>
   </div>
 
-  <a href='../test1_set1/test1_set1_instructions.html'><button type = "button" class = "button">Proceed</button></a>
+  <div>
+    <a href='../test1_vibration/option1/test1_set1/test1_set1_instructions.html'><button type = "button" class = "button">Proceed to Test A</button></a>
+    <!-- may need to change the href to point to the correct location later -->
+    <a href='../test1_vibration/option2/test1_set2/test1_set2_instructions.html'><button type = "button" class = "button">Proceed to Test B</button></a>   
+  </div>
+
+
+
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-        <script src="public/index.js"></script>
+        <script src="/public/index.js"></script>
 
     
     
