--- a/test1_vibration/option2/test1_set1/test1_set1_instructions.html
+++ b/test1_vibration/option2/test1_set1/test1_set1_instructions.html
@@ -30,7 +30,7 @@
       button to move onto the experiment. 
     </p>
 
-    <table>
+    <table id="Instruction_Table">
         <tr>
             <th>Emoticon</th>
             <th>Description</th>
@@ -48,25 +48,24 @@
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/laugh.png"></td>
-            <td>4 Short Vibrations</td>
+            <td>1 Long + 1 Short + 1 Long Vibration</td>
             <td><Button onclick = "laugh()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/care.png"></td>
-            <td>2 Short + 1 Long Vibration</td>
+            <td>2 Short + 2 Long Vibrations</td>
             <td><Button onclick = "care()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/sad.png"></td>
-            <td>1 Long Vibration</td>
+            <td>2 Long Vibrations</td>
             <td><Button onclick = "sad()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/angry.png"></td>
-            <td>2 Long Vibrations</td>
+            <td>4 Long Vibrations</td>
             <td><Button onclick = "angry()">Play</Button></td>
         </tr>
-
     </table>
 
     <div>
