--- a/test1_vibration/option1/test1_set2/test1_set2_instructions.html
+++ b/test1_vibration/option1/test1_set2/test1_set2_instructions.html
@@ -38,12 +38,12 @@
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/like.png"></td>
-            <td>1 Short Vibration</td>
+            <td>1 Long Vibration</td>
             <td><Button onclick = "like()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/heart.png"></td>
-            <td>2 Short Vibrations</td>
+            <td>1 Short + 1 Long + 2 Short Vibrations</td>
             <td><Button onclick = "love()">Play</Button></td>
         </tr>
         <tr>
@@ -53,17 +53,17 @@
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/care.png"></td>
-            <td>2 Short + 1 Long Vibration</td>
+            <td>1 Long + 1 Short + 1 Long + 1 Short Vibration</td>
             <td><Button onclick = "care()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/sad.png"></td>
-            <td>1 Long Vibration</td>
+            <td>3 Short Vibrations</td>
             <td><Button onclick = "sad()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/angry.png"></td>
-            <td>2 Long Vibrations</td>
+            <td>1 Long 1 Short Vibrations</td>
             <td><Button onclick = "angry()">Play</Button></td>
         </tr>
 
