added basic gestures

--- a/test1_vibration/option1/test1_set1/test1_set1.html
+++ b/test1_vibration/option1/test1_set1/test1_set1.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <h1 id = testText>
+    <h1 id = "testText">
       Press ANY emoticon below to begin the experiment!
     </h1>
-    <p id = selectNow>Wait...</p>
+    <p id = "selectNow">Wait...</p>
     <hr>
     <div class="items">
         <img class="images" onclick = "test(0)" id = 'like' src="/assets/like.png" alt="Like Emoticon">
