--- a/test1_vibration/option1/test1_set2/test1_set2_instructions.html
+++ b/test1_vibration/option1/test1_set2/test1_set2_instructions.html
@@ -6,12 +6,13 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <link rel="stylesheet" href="test1_set2.css">
-      <script src="test1_set2.js"></script>
+      <script src="test1_set2_instructions.js"></script>
+      <!-- script source is buggy for some reason -->
   </head>
 
   <body>
     <h1>
-      Set 1: Participant Instructions
+      Set 2: Participant Instructions
     </h1>
 
     <p>
@@ -63,7 +64,7 @@
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/angry.png"></td>
-            <td>1 Long 1 Short Vibrations</td>
+            <td>1 Short + 1 Long Vibrations</td>
             <td><Button onclick = "angry()">Play</Button></td>
         </tr>
 
