timer added for instructions

--- a/test1_vibration/option1/test1_set1/test1_set1_instructions.html
+++ b/test1_vibration/option1/test1_set1/test1_set1_instructions.html
@@ -5,15 +5,18 @@
       <title>Vibration Set 1 Instructions</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-      <link rel="stylesheet" href="test1_set1.css">
-      <script src="test1_set1.js"></script>
+      <link rel="stylesheet" href="test1_set1_instructions.css">
   </head>
 
   <body>
+    <h1 id = "timerExplanation">Press the button below to start the timer and read the instructions</h1>
+    <button id = "timerButton" onclick = javascript:clicked()>hello</button>
+    <!-- 60 seconds, 1 minute-->
+    <h1 id = "timer">1:00</h1>
     <h1>
       Set 1: Participant Instructions
     </h1>
-
+    <script src="test1_set1_instructions.js"></script>
     <p>
       Welcome! Below you will find 6 emoticons and their respective vibration sequences. 
       You may click the 'Play' button to experience the vibration for a specific emoticon. 
