changed button name

--- a/test1_vibration/option1/test1_set1/test1_set1_instructions.html
+++ b/test1_vibration/option1/test1_set1/test1_set1_instructions.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1 id = "timerExplanation">Press the button below to start the timer and read the instructions</h1>
-    <button id = "timerButton" onclick = javascript:clicked()>hello</button>
+    <button id = "timerButton" onclick = javascript:clicked()>Click Here!</button>
     <!-- 60 seconds, 1 minute-->
     <h1 id = "timer">1:00</h1>
     <h1>
