--- a/test2_gestures/gestures_set2.html
+++ b/test2_gestures/gestures_set2.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-      <title>Test Page 1</title>
+      <title>Gesture Set 2</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <link rel="stylesheet" href="gestures.css">
@@ -10,20 +10,30 @@
 
   <body>
     <h1 id = testText>
-      Tap in the grid below
+      Tap 'Enter' to begin the test
     </h1>
     <p id = selectNow>Wait...</p>
     <hr>
 
     <div id="parent">
-        <div id="top-left" class="square"></div>
-        <div id="top-right" class="square"></div>
+        <div id="top-left" class="square2">
+            <!-- <img src="/assets/like.png" class="items">
+            <img src="/assets/heart.png" class="items"> -->
+        </div>
+        <div id="top-right" class="square2">
+          <!-- Enter -->
+        </div>
     </div>
     <div id="parent">
-        <div id="bottom-left" class="square"></div>
-        <div id="bottom-right" class="square"></div>
+        <div id="bottom-left" class="square2">
+          <!-- <img src="/assets/laugh.png" class="items">
+          <img src="/assets/care.png" class="items"> -->
+        </div>
+        <div id="bottom-right" class="square2">
+          <!-- <img src="/assets/sad.png" class="items">
+          <img src="/assets/angry.png" class="items"> -->
+        </div>
     </div>
-
 
   </body>
 </html>
