--- a/test2_gestures/gestures_set2.html
+++ b/test2_gestures/gestures_set2.html
@@ -6,6 +6,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
       <link rel="stylesheet" href="gestures.css">
+      <script src="hammer.js"></script>
   </head>
 
   <body>
