--- a/test2_gestures/gestures_set2.html
+++ b/test2_gestures/gestures_set2.html
@@ -15,25 +15,16 @@
     <p id = selectNow>Wait...</p>
     <hr>
 
-    <div id="parent">
-        <div id="top-left" class="square2">
-            <!-- <img src="/assets/like.png" class="items">
-            <img src="/assets/heart.png" class="items"> -->
-        </div>
-        <div id="top-right" class="square2">
-          <!-- Enter -->
-        </div>
-    </div>
-    <div id="parent">
-        <div id="bottom-left" class="square2">
-          <!-- <img src="/assets/laugh.png" class="items">
-          <img src="/assets/care.png" class="items"> -->
-        </div>
-        <div id="bottom-right" class="square2">
-          <!-- <img src="/assets/sad.png" class="items">
-          <img src="/assets/angry.png" class="items"> -->
-        </div>
-    </div>
+    <div class="slide slide_wrap">
+      <div class="slide_item item1">1</div>
+      <div class="slide_item item2">2</div>
+      <div class="slide_item item3">3</div>
+      <div class="slide_item item4">4</div>
+      <div class="slide_item item5">5</div>
+      <div class="slide_prev_button slide_button">◀</div>
+      <div class="slide_next_button slide_button">▶</div>
+      <ul class="slide_pagination"></ul>
+      </div>
 
   </body>
 </html>
