--- a/test2_gestures/gestures_set2.html
+++ b/test2_gestures/gestures_set2.html
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <h1 id = "timerExplanation">Press the button below to start the experiment</h1>
+    <button id = "timerButton" onclick = javascript:clicked()>Click Here!</button>
     <h1 id = testText>
       Tap 'Enter' to begin the test
     </h1>
@@ -21,8 +23,7 @@
       <div class="slide_item item3">3</div>
       <div class="slide_item item4">4</div>
       <div class="slide_item item5">5</div>
-      <div class="slide_prev_button slide_button">◀</div>
-      <div class="slide_next_button slide_button">▶</div>
+      <div class="slide_item item6">6</div>
       <ul class="slide_pagination"></ul>
       </div>
 
