--- a/test2_gestures/gestures_set2.html
+++ b/test2_gestures/gestures_set2.html
@@ -18,12 +18,12 @@
     <hr>
 
     <div class="slide slide_wrap">
-      <div class="slide_item item1">1</div>
-      <div class="slide_item item2">2</div>
-      <div class="slide_item item3">3</div>
-      <div class="slide_item item4">4</div>
-      <div class="slide_item item5">5</div>
-      <div class="slide_item item6">6</div>
+      <div class="slide_item item1"><img src="/assets/like.png" class="items"></div>
+      <div class="slide_item item2"><img src="/assets/heart.png" class="items"></div>
+      <div class="slide_item item3"><img src="/assets/laugh.png" class="items"></div>
+      <div class="slide_item item4"><img src="/assets/care.png" class="items"></div>
+      <div class="slide_item item5"><img src="/assets/sad.png" class="items"></div>
+      <div class="slide_item item6"><img src="/assets/angry.png" class="items"></div>
       <ul class="slide_pagination"></ul>
       </div>
 
