--- a/test2_gestures/index2.html
+++ b/test2_gestures/index2.html
@@ -17,7 +17,7 @@
   <div class="container-fluid">
     <div class="center">
       <h1>Eyes-Free Interactions Lab
-        <div>Part 1: Vibrations</div>
+        <div>Part 2: Gestures</div>
         <p class = "github"> View our source code at 
           <a href='https://github.com/gypark23/projectBAKI'><i class="fa fa-github" style="text-align: right;"></i></a>
         </p>
@@ -25,25 +25,20 @@
       <hr>
       <p class = "thanks">Thank you for participating in our Human Computer Interaction research project! This experiment is divided into 2 sections: Vibrations and Gestures</p>
       <hr>
-      <p class = "instruction">Instructions for Part 1: Vibrations</p>
+      <p class = "instruction">Instructions for Part 2: Gestures</p>
 
       <div class="list">
         <ul>
-          <li>In this first section, you will learn 2 different sets of vibrations and their corresponding emoticons</li>
-          <li>There are 6 vibrations in each vibration set (12 vibrations total)</li>
-          <li>You will have 1 minute to learn and experiment with the first set of 6 vibrations and emoticons</li>
+          <li>In this first section, you will learn 2 different sets of gestures and respond to incoming emoticon vibrations</li>
+          <li>In both gesture sets, you will respond to Vibration Set 1 from the previous part of the experiment</li>
+          <li>There are 6 gestures in each vibration set (12 gestures total)</li>
+          <li>You will have 1 minute to learn and experiment with the first set of 6 gestures and emoticons</li>
           <li>Then, you will be tested on a sequence of 12 random vibrations selected from the first set of vibrations</li>
-          <li>For each vibration, respond with the corresponding emoticon button to the best of your abilities</li>
+          <li>For each vibration, respond with the corresponding gesture to the best of your abilities</li>
           <li><b>After you complete each set, show the alert box to a test administrator</b></li>
-          <li>You will then be directed to learn and test the second set of vibrations</li>
-          <li>Once you complete both vibration sets, you will move onto Part 2: Gestures</li>
+          <li>You will then be directed to learn and test the second set of gestures</li>
         </ul>
       </div>
-
-
-
-      
-
     </div>
   </div>
 
