--- a/test2_gestures/vibration_instructions/vibration_instructions.html
+++ b/test2_gestures/vibration_instructions/vibration_instructions.html
@@ -18,10 +18,12 @@
     </h1>
     <script src="test1_set1_instructions.js"></script>
     <p>
-      Welcome! Below you will find "familiar" 6 emoticons and their respective vibration sequences that you have played before.<br> 
-      <mark><b>Please take your time to "re-learn" the vibrations again!</b></mark><br>
-      You may click the 'Play' button to experience the vibration for a specific emoticon. 
+      <b>Welcome! Please take your time to "re-learn" Vibration Set 1 used in the previous section. You will use this vibration set for both gesture experiments.</b>
     </p>
+    <p>
+        You may click the 'Play' button to experience the vibration for a specific emoticon. 
+    </p>
+
 
     <!-- <p>
       You will shortly begin an experiment where you will experience a sequence of vibrations on your Android device.
@@ -74,7 +76,7 @@
     </table>
 
     <div>
-        <a href='test1_set1.html'><button type = "button" class = "button">Proceed</button></a>
+        <a href='/test2_gestures/gestures_set1.html'><button type = "button" class = "button">Proceed</button></a>
     </div>
       
     <!-- <div class="thumbnails">
