--- a/test2_gestures/vibration_instructions/vibration_instructions.html
+++ b/test2_gestures/vibration_instructions/vibration_instructions.html
@@ -18,7 +18,7 @@
     </h1>
     <script src="test1_set1_instructions.js"></script>
     <p>
-      <b>Welcome! Please take your time to "re-learn" Vibration Set 1 used in the previous section. You will use this vibration set for both gesture experiments.</b>
+      <b>Welcome! Please take time to "re-learn" Vibration Set 1 used in the previous section. You will use this vibration set for both gesture experiments.</b>
     </p>
     <p>
         You may click the 'Play' button to experience the vibration for a specific emoticon. 
