hidden elements fixed

--- a/test2_gestures/gestures_set1.html
+++ b/test2_gestures/gestures_set1.html
@@ -5,10 +5,12 @@
       <title>Gesture Set 1</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-      <link rel="stylesheet" href="gestures.css">
+      <link rel="stylesheet" href="gestures_set1.css">
   </head>
 
   <body>
+    <h1 id = "timerExplanation">Press the button below to start the experiment</h1>
+    <button id = "timerButton" onclick = javascript:clicked()>Click Here!</button>
     <h1 id = testText>
       Tap 'Enter' to begin the test
     </h1>
