--- a/test2_gestures/gestures_set1.html
+++ b/test2_gestures/gestures_set1.html
@@ -5,7 +5,7 @@
       <title>Gesture Set 1</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-      <link rel="stylesheet" href="gestures_set1.css">
+      <link rel="stylesheet" href="gestures.css">
   </head>
 
   <body>
