--- a/test2_gestures/vibration_instructions/vibration_instructions.html
+++ b/test2_gestures/vibration_instructions/vibration_instructions.html
@@ -76,7 +76,7 @@
     </table>
 
     <div>
-        <a href='/test2_gestures/gestures_set1.html'><button type = "button" class = "button">Proceed</button></a>
+        <!-- <a href='/test2_gestures/gestures_set1.html'><button type = "button" class = "button">Proceed</button></a> -->
     </div>
       
     <!-- <div class="thumbnails">
