--- a/test1_vibration/test1_set2/test1_set2_instructions.html
+++ b/test1_vibration/test1_set2/test1_set2_instructions.html
@@ -2,21 +2,21 @@
 
 <html>
   <head>
-      <title>Vibration Set 1 Instructions</title>
+      <title>Vibration Set 2 Instructions</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-      <link rel="stylesheet" href="test1_set1_instructions.css">
-  </head>
-
-  <body>
-    <h1 id = "timerExplanation">Press the button below to start the timer and read the instructions</h1>
-    <button id = "timerButton" onclick = javascript:clicked()>Click Here!</button>
-    <!-- 60 seconds, 1 minute-->
-    <h1 id = "timer">1:00</h1>
-    <h1>
-      Set 1: Participant Instructions
-    </h1>
-    <script src="test1_set1_instructions.js"></script>
+      <link rel="stylesheet" href="test1_set2_instructions.css">
+    </head>
+    
+    <body>
+        <h1 id = "timerExplanation">Press the button below to start the timer and read the instructions</h1>
+        <button id = "timerButton" onclick = javascript:clicked()>Click Here!</button>
+        <!-- 60 seconds, 1 minute-->
+        <h1 id = "timer">1:00</h1>
+        <h1>
+            Set 2: Participant Instructions
+        </h1>
+        <script src="test1_set2_instructions.js"></script>
     <p>
       Welcome! Below you will find 6 emoticons and their respective vibration sequences. 
       You may click the 'Play' button to experience the vibration for a specific emoticon. 
@@ -33,7 +33,7 @@
       button to move onto the experiment. 
     </p>
 
-    <table id="Instruction_Table">
+    <table>
         <tr>
             <th>Emoticon</th>
             <th>Description</th>
@@ -41,39 +41,39 @@
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/like.png"></td>
-            <td>1 Short Vibration</td>
+            <td>1 Long Vibration</td>
             <td><Button onclick = "like()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/heart.png"></td>
-            <td>2 Short Vibrations</td>
+            <td>1 Short + 1 Long + 2 Short Vibrations</td>
             <td><Button onclick = "love()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/laugh.png"></td>
-            <td>1 Long + 1 Short + 1 Long Vibration</td>
+            <td>4 Short Vibrations</td>
             <td><Button onclick = "laugh()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/care.png"></td>
-            <td>2 Short + 2 Long Vibrations</td>
+            <td>1 Long + 1 Short + 1 Long + 1 Short Vibration</td>
             <td><Button onclick = "care()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/sad.png"></td>
-            <td>2 Long Vibrations</td>
+            <td>3 Short Vibrations</td>
             <td><Button onclick = "sad()">Play</Button></td>
         </tr>
         <tr>
             <td><img class="thumbnails" src="/assets/angry.png"></td>
-            <td>4 Long Vibrations</td>
+            <td>1 Short + 1 Long Vibrations</td>
             <td><Button onclick = "angry()">Play</Button></td>
         </tr>
 
     </table>
 
     <div>
-        <a href='test1_set1.html'><button type = "button" class = "button">Proceed</button></a>
+        <a href='/test1_set2.html'><button type = "button" class = "button">Proceed</button></a>
     </div>
       
     <!-- <div class="thumbnails">
