--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,15 @@
   </div>
 
   <div id="button_wrapper">
-    <a href='../test1_vibration/option1/test1_set1/test1_set1_instructions.html'><button type = "button" class = "button">Proceed to Test A</button></a>
+    <a href='../test1_vibration/test1_set1/test1_set1_instructions.html'><button type = "button" class = "button">Test 1 Set 1</button></a>
     <!-- may need to change the href to point to the correct location later -->
-    <a href='../test1_vibration/option2/test1_set2/test1_set2_instructions.html'><button type = "button" class = "button">Proceed to Test B</button></a>   
+    <a href='../test1_vibration/test1_set2/test1_set2_instructions.html'><button type = "button" class = "button">Test 1 Set 2</button></a>   
+  </div>
+  <div id = "button_wrapper">
+    <a href='../test1_vibration/test2_set1/test2_set1_instructions.html'><button type = "button" class = "button_2">Test 2 Set 1</button></a>
+    <!-- may need to change the href to point to the correct location later -->
+    <a href='../test1_vibration/test2_set2/test2_set2_instructions.html'><button type = "button" class = "button_2">Test 2 Set 2</button></a>   
+
   </div>
 
 
