--- a/public/index.html
+++ b/public/index.html
@@ -52,13 +52,9 @@
     <!-- may need to change the href to point to the correct location later -->
     <a href='../test1_vibration/test1_set2/test1_set2_instructions.html'><button type = "button" class = "button">Test 1 Set 2</button></a>   
   </div>
-  <div id = "button_wrapper">
-    <a href='../test1_vibration/test2_set1/test2_set1_instructions.html'><button type = "button" class = "button_2">Test 2 Set 1</button></a>
-    <!-- may need to change the href to point to the correct location later -->
-    <a href='../test1_vibration/test2_set2/test2_set2_instructions.html'><button type = "button" class = "button_2">Test 2 Set 2</button></a>   
-
-  </div>
-
+  <hr>
+  <p class = "instruction">Once you have finished both experiments, press the button below to move on to the next experiment.</p>
+  <a href='/test2_gestures'><button type = "button" class = "button_2">Move to Test 2</button></a>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
