--- a/test1_vibration/test1_set2/test1_set2_instructions.html
+++ b/test1_vibration/test1_set2/test1_set2_instructions.html
@@ -73,7 +73,7 @@
     </table>
 
     <div>
-        <a href='/test1_set2.html'><button type = "button" class = "button">Proceed</button></a>
+        <a href='test1_set2.html'><button type = "button" class = "button">Proceed</button></a>
     </div>
       
     <!-- <div class="thumbnails">
