dupe instructions.js

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         <ul>
           <li>In this first section, you will learn 2 different sets of vibrations and their corresponding emoticons</li>
           <li>There are 6 vibrations in each vibration set (12 vibrations total)</li>
-          <li>You will have 1 minute to learn and experiment with the first set of 6 vibrations and emoticons</li>
+          <li>You will have 1 minute to learn and experiment with the first set of assigned vibrations</li>
           <li>Then, you will be tested on a sequence of 12 random vibrations selected from the first set of vibrations</li>
           <li>For each vibration, respond with the corresponding emoticon button to the best of your abilities</li>
           <li><b>After you complete each set, show the alert box to a test administrator</b></li>
