--- a/test1_vibration/test1_set2/test1_set2_instructions.html
+++ b/test1_vibration/test1_set2/test1_set2_instructions.html
@@ -72,9 +72,9 @@
 
     </table>
 
-    <div>
+    <!-- <div>
         <a href='test1_set2.html'><button type = "button" class = "button">Proceed</button></a>
-    </div>
+    </div> -->
       
     <!-- <div class="thumbnails">
         <img src="/public/like.png">
