--- a/test2_gestures/index.html
+++ b/test2_gestures/index.html
@@ -30,10 +30,11 @@
       <div class="list">
         <ul>
           <li>In this first section, you will learn 2 different sets of gestures and respond to incoming emoticon vibrations</li>
+          <li>There are 6 gestures in each gesture set (12 gestures total)</li>
           <li>In both gesture sets, you will respond to Vibration Set 1 from the previous part of the experiment</li>
-          <li>There are 6 gestures in each vibration set (12 gestures total)</li>
-          <li>You will have 1 minute to learn and experiment with the first set of 6 gestures and emoticons</li>
-          <li>Then, you will be tested on a sequence of 12 random vibrations selected from the first set of vibrations</li>
+          <li><b>You will have 1 minute to re-learn Vibration Set 1</b></li>
+          <li>Then, you will learn and experiment with the first set of assigned gestures</li>
+          <li>After, you will be tested on a sequence of 12 random vibrations selected from Vibration Set 1</li>
           <li>For each vibration, respond with the corresponding gesture to the best of your abilities</li>
           <li><b>After you complete each set, show the alert box to a test administrator</b></li>
           <li>You will then be directed to learn and test the second set of gestures</li>
@@ -43,9 +44,9 @@
   </div>
 
   <div id="button_wrapper">
-    <a href='../test1_vibration/option1/test1_set1/test1_set1_instructions.html'><button type = "button" class = "button">Proceed to Test A</button></a>
+    <a href='/test2_gestures/vibration_instructions/vibration_instructions1.html'><button type = "button" class = "button">Proceed to Test A</button></a>
     <!-- may need to change the href to point to the correct location later -->
-    <a href='../test1_vibration/option2/test1_set2/test1_set2_instructions.html'><button type = "button" class = "button">Proceed to Test B</button></a>   
+    <a href='/test2_gestures/vibration_instructions/vibration_instructions2.html'><button type = "button" class = "button">Proceed to Test B</button></a>   
   </div>
 
 
