--- a/test2_gestures/vibration_instructions/vibration_instructions2.html
+++ b/test2_gestures/vibration_instructions/vibration_instructions2.html
@@ -2,10 +2,10 @@
 
 <html>
   <head>
-      <title>Vibration Set 1 Instructions</title>
+      <title>Vibration Instructions</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-      <link rel="stylesheet" href="test1_set1_instructions.css">
+      <link rel="stylesheet" href="test1_set1_instructions2.css">
   </head>
 
   <body>
@@ -14,13 +14,16 @@
     <!-- 60 seconds, 1 minute-->
     <h1 id = "timer">1:00</h1>
     <h1>
-      Set 1: Participant Instructions
+      Vibration Re-Learning
     </h1>
     <script src="test1_set1_instructions.js"></script>
     <p>
-      Welcome! Below you will find 6 emoticons and their respective vibration sequences. 
-      You may click the 'Play' button to experience the vibration for a specific emoticon. 
+      <b>Welcome! Please take time to "re-learn" Vibration Set 1 used in the previous section. You will use this vibration set for both gesture experiments.</b>
     </p>
+    <p>
+        You may click the 'Play' button to experience the vibration for a specific emoticon. 
+    </p>
+
 
     <!-- <p>
       You will shortly begin an experiment where you will experience a sequence of vibrations on your Android device.
@@ -72,9 +75,9 @@
 
     </table>
 
-    <!-- <div>
-        <a href='/test1_set1.html'><button type = "button" class = "button">Proceed</button></a>
-    </div> -->
+    <div>
+        <!-- <a href='/test2_gestures/gestures_set1.html'><button type = "button" class = "button">Proceed</button></a> -->
+    </div>
       
     <!-- <div class="thumbnails">
         <img src="/public/like.png">
