--- a/test2_gestures/vibration_instructions/vibration_instructions2.html
+++ b/test2_gestures/vibration_instructions/vibration_instructions2.html
@@ -5,7 +5,7 @@
       <title>Vibration Instructions</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-      <link rel="stylesheet" href="test1_set1_instructions2.css">
+      <link rel="stylesheet" href="vibration_instructions.css">
   </head>
 
   <body>
