--- a/test2_gestures/vibration_instructions/vibration_instructions2.html
+++ b/test2_gestures/vibration_instructions/vibration_instructions2.html
@@ -16,7 +16,7 @@
     <h1>
       Vibration Re-Learning
     </h1>
-    <script src="test1_set1_instructions.js"></script>
+    <script src="test1_set1_instructions2.js"></script>
     <p>
       <b>Welcome! Please take time to "re-learn" Vibration Set 1 used in the previous section. You will use this vibration set for both gesture experiments.</b>
     </p>
