--- a/test2_gestures/test2_set2/gestures_set2.html
+++ b/test2_gestures/test2_set2/gestures_set2.html
@@ -10,6 +10,7 @@
 
   <body>
     <h1 id = "timerExplanation">Press the button below to start the experiment</h1>
+    <h1 id = "timerExplanation_1">Please ensure you are blindfolded!</h1>
     <button id = "timerButton" onclick = javascript:clicked()>Click Here!</button>
     <h1 id = testText>
       Tap 'Enter' to begin the test
